Issue #7084: Fix a (very unlikely) crash when printing a list from one thread, and mutating it from another one.  Patch by Scott Dial.